Bug 113270 - Shift clicking on an element with -webkit-user-select: all doesn't extend selection
Summary: Shift clicking on an element with -webkit-user-select: all doesn't extend sel...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
: 41977 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-25 20:32 PDT by Ryosuke Niwa
Modified: 2016-03-31 06:06 PDT (History)
13 users (show)

See Also:


Attachments
Fixes the bug (13.16 KB, patch)
2013-03-25 20:49 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Fixed builds (13.18 KB, patch)
2013-03-25 22:20 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Reverted xcworkspace changes (13.18 KB, patch)
2013-03-25 22:22 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Reverted xcworkspace changes for real (11.07 KB, patch)
2013-03-25 22:25 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from gce-cr-linux-08 for chromium-linux-x86_64 (642.89 KB, application/zip)
2013-03-25 23:30 PDT, WebKit Review Bot
no flags Details
Fixed the test (15.54 KB, patch)
2013-03-26 11:23 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff
Archive of layout-test-results from gce-cr-linux-04 for chromium-linux-x86_64 (903.73 KB, application/zip)
2013-03-26 12:33 PDT, WebKit Review Bot
no flags Details
Skipped the test on non-Mac ports (17.85 KB, patch)
2013-03-26 12:44 PDT, Ryosuke Niwa
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2013-03-25 20:32:21 PDT
Shift clicking on an element with -webkit-user-select: all results in clearing the existing selection instead of extending the selection.
Comment 1 Ryosuke Niwa 2013-03-25 20:38:40 PDT
<rdar://problem/13485204>
Comment 2 Ryosuke Niwa 2013-03-25 20:49:24 PDT
Created attachment 194992 [details]
Fixes the bug
Comment 3 Early Warning System Bot 2013-03-25 20:57:19 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass qt-ews (qt):
Output: http://webkit-commit-queue.appspot.com/results/17300315
Comment 4 Early Warning System Bot 2013-03-25 21:00:29 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass qt-wk2-ews (qt):
Output: http://webkit-commit-queue.appspot.com/results/17302294
Comment 5 kov's GTK+ EWS bot 2013-03-25 21:18:43 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass gtk-ews (gtk):
Output: http://webkit-commit-queue.appspot.com/results/17200903
Comment 6 WebKit Review Bot 2013-03-25 21:21:27 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://webkit-commit-queue.appspot.com/results/17318202
Comment 7 Build Bot 2013-03-25 21:21:44 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass mac-wk2-ews (mac-wk2):
Output: http://webkit-commit-queue.appspot.com/results/17302295
Comment 8 EFL EWS Bot 2013-03-25 21:35:18 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass efl-ews (efl):
Output: http://webkit-commit-queue.appspot.com/results/17135988
Comment 9 WebKit Review Bot 2013-03-25 21:37:12 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass cr-linux-debug-ews (chromium-xvfb):
Output: http://webkit-commit-queue.appspot.com/results/17295322
Comment 10 Peter Beverloo (cr-android ews) 2013-03-25 21:47:28 PDT
Comment on attachment 194992 [details]
Fixes the bug

Attachment 194992 [details] did not pass cr-android-ews (chromium-android):
Output: http://webkit-commit-queue.appspot.com/results/17291316
Comment 11 Ryosuke Niwa 2013-03-25 22:20:27 PDT
Created attachment 195002 [details]
Fixed builds
Comment 12 Ryosuke Niwa 2013-03-25 22:22:32 PDT
Created attachment 195003 [details]
Reverted xcworkspace changes
Comment 13 Ryosuke Niwa 2013-03-25 22:25:05 PDT
Created attachment 195005 [details]
Reverted xcworkspace changes for real
Comment 14 WebKit Review Bot 2013-03-25 23:30:26 PDT
Comment on attachment 195005 [details]
Reverted xcworkspace changes for real

Attachment 195005 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://webkit-commit-queue.appspot.com/results/17216787

New failing tests:
editing/selection/user-select-all-with-shift.html
Comment 15 WebKit Review Bot 2013-03-25 23:30:30 PDT
Created attachment 195012 [details]
Archive of layout-test-results from gce-cr-linux-08 for chromium-linux-x86_64

The attached test failures were seen while running run-webkit-tests on the chromium-ews.
Bot: gce-cr-linux-08  Port: chromium-linux-x86_64  Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Comment 16 Build Bot 2013-03-26 03:22:34 PDT
Comment on attachment 195005 [details]
Reverted xcworkspace changes for real

Attachment 195005 [details] did not pass win-ews (win):
Output: http://webkit-commit-queue.appspot.com/results/17200917
Comment 17 Ryosuke Niwa 2013-03-26 10:11:18 PDT
I need to force mac editing behavior in the test otherwise anchor/focus will be swapped on non-Mac platforms.
Comment 18 Ryosuke Niwa 2013-03-26 11:23:13 PDT
Created attachment 195124 [details]
Fixed the test
Comment 19 WebKit Review Bot 2013-03-26 12:32:58 PDT
Comment on attachment 195124 [details]
Fixed the test

Attachment 195124 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://webkit-commit-queue.appspot.com/results/17200952

New failing tests:
editing/selection/user-select-all-with-shift.html
Comment 20 WebKit Review Bot 2013-03-26 12:33:02 PDT
Created attachment 195143 [details]
Archive of layout-test-results from gce-cr-linux-04 for chromium-linux-x86_64

The attached test failures were seen while running run-webkit-tests on the chromium-ews.
Bot: gce-cr-linux-04  Port: chromium-linux-x86_64  Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Comment 21 Ryosuke Niwa 2013-03-26 12:44:40 PDT
Created attachment 195147 [details]
Skipped the test on non-Mac ports
Comment 22 Enrica Casucci 2013-03-27 11:10:01 PDT
Comment on attachment 195147 [details]
Skipped the test on non-Mac ports

Looks good.
Comment 23 WebKit Review Bot 2013-03-27 16:59:56 PDT
Comment on attachment 195147 [details]
Skipped the test on non-Mac ports

Clearing flags on attachment: 195147

Committed r147022: <http://trac.webkit.org/changeset/147022>
Comment 24 WebKit Review Bot 2013-03-27 17:00:01 PDT
All reviewed patches have been landed.  Closing bug.
Comment 25 Antonio Gomes 2016-03-31 06:06:22 PDT
*** Bug 41977 has been marked as a duplicate of this bug. ***